compiler/testData/diagnostics/tests/enum/enumWithEmptyName.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
enum class<!SYNTAX!><!> {
}
